--- a/CSS/fw.css
+++ b/CSS/fw.css
@@ -107,6 +107,9 @@
 .mb-10 {
     margin-bottom: 10px;
 }
+.mb-0 {
+    margin-bottom: 0;
+}
 .mb-20 {
     margin-bottom: 20px;
 }
@@ -169,6 +172,9 @@
     color: #0A66C2;
 }
 
+.bg-white {
+    background-color: #fff;
+}
 .bg-blue {
     background-color: #0075ff;
 }
