--- a/CSS/style.css
+++ b/CSS/style.css
@@ -6,6 +6,7 @@
     --secondly1-color: #94ffae ; 
     --secondly1-a-color: #94ffafa1 ; 
     --secondly2-color: #ffae94 ; 
+    --secondly2-alt-color: #fa9978 ; 
     --secondly2-a-color: #ffaf94a8 ; 
     --secondly3-color: #ff94e5 ; 
     --p-color: #888;
@@ -172,19 +173,29 @@ body.both header .container a.lang-change  {
     background-color: black;
     color: white; 
     text-transform: uppercase;
+    margin-left: 10px;
+}
+body.both header .container a.search-bar  {
+    width: 30px;
+    height: 30px;
+    background-color: black;
+    color: white; 
+    text-transform: uppercase;
 }
 /* header */
 /* landing */
 body.both .landing-page {
+    position: sticky;
+    top: 0;
     width: 100%;
     height: 100vh;
     overflow: hidden;
 }
-@media (max-width: 767px) {
+/* @media (max-width: 767px) {
     body.both .landing-page {
         background-color: var(--main-color);
     }
-}
+} */
 @media (min-width:768px) {
 body.both .landing-page::before ,
 body.both .landing-page::after {
@@ -258,7 +269,7 @@ body.both .landing-page .simple-info {
 }
 @media (max-width:768px) {
     body.both .landing-page .simple-info .simple-intro {
-    background-color: rgba(255, 255, 255, 0.644);
+    background-color: #f3f3f3ba;
     padding: 20px;
     border-radius: 40px;
     -webkit-border-radius: 40px;
@@ -267,6 +278,7 @@ body.both .landing-page .simple-info {
     -o-border-radius: 40px;
     z-index: 1;
     min-width: 280px;
+    width: 50%;
     margin: 0 20px;
 }
 }
@@ -280,7 +292,7 @@ body.both .landing-page .simple-info .simple-intro .name span {
 body.both .landing-page .simple-info .simple-intro .name h1 {
     color: var(--p-color);
 }
-@media (max-width:320px) {
+@media (max-width:630px) {
     body.both .landing-page .simple-info .simple-intro .name h1 {
         font-size: 28px;
     }
@@ -344,6 +356,7 @@ body.both .landing-page .simple-info .simple-img img {
     -moz-border-radius: 50%;
     -ms-border-radius: 50%;
     -o-border-radius: 50%;
+    border: 10px solid white;
 }
 @media (max-width:768px) {
     body.both .landing-page .simple-info .simple-img img {
@@ -352,6 +365,7 @@ body.both .landing-page .simple-info .simple-img img {
 }
 
 body.both .landing-page a.menu-angles i {
+    animation: move-down .6s alternate infinite;
     bottom: 30px;
     left: 50%;
     transform: translateX(-50%);
@@ -361,8 +375,166 @@ body.both .landing-page a.menu-angles i {
     -o-transform: translateX(-50%);
     color: black;
     font-size: 25px;
+    -webkit-animation: move-down .6s alternate infinite;
 }
+@keyframes move-down {
+    0%, 100% {
+        transform: translateY(0);
+        -webkit-transform: translateY(0);
+        -moz-transform: translateY(0);
+        -ms-transform: translateY(0);
+        -o-transform: translateY(0);
+}
+    50% {
+        transform: translateY(10px);
+        -webkit-transform: translateY(10px);
+        -moz-transform: translateY(10px);
+        -ms-transform: translateY(10px);
+        -o-transform: translateY(10px);
+}
+}
+
 /* landing */
+/* main */
+main {
+    height: 5555px;
+}
+.sec-title {
+    position: relative;
+    width: fit-content;
+    margin: auto;
+    text-transform: capitalize ;
+}
+.sec-title:before ,
+.sec-title:after {
+    content: "";
+    position: absolute;
+    background-color: black;
+}
+.sec-title:before {
+    width: 100%;
+    height: 2px;
+    bottom: -5px;
+
+}
+.sec-title:after {
+    left: 50%;
+    bottom: -14px;
+    transform: translateX(-50%);
+    width: 14px;
+    height: 14px;
+    border: 4px solid white;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    -webkit-transform: translateX(-50%);
+    -moz-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    -o-transform: translateX(-50%);
+}
+.projects-holder {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    gap: 20px;
+    margin-top: 60px;
+}
+@media (max-width:320px) {
+    .projects-holder {
+        grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    }
+}
+.project {
+    width: 100%;
+    position: relative;
+    overflow: hidden;
+    border-radius: 10px;
+    height: 250px;
+    background-attachment: local;
+    background-repeat: no-repeat;
+    background-size: 100%;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+    transform: .3s ;
+    -webkit-transform: .3s ;
+    -moz-transform: .3s ;
+    -ms-transform: .3s ;
+    -o-transform: .3s ;
+    cursor: pointer;
+}
+
+.project:after {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #00000065;
+    transition: .3s;
+    -webkit-transition: .3s;
+    -moz-transition: .3s;
+    -ms-transition: .3s;
+    -o-transition: .3s;
+}
+.project .project-title {
+    top: -100%;
+    left: 0%;
+    width: 100%;
+    text-align: center;
+    text-transform: capitalize;
+    transition: .3s;
+    -webkit-transition: .3s;
+    -moz-transition: .3s;
+    -ms-transition: .3s;
+    -o-transition: .3s;
+    z-index: 11;
+
+}
+.project .project-btns {
+    position: absolute;
+    bottom: -100%;
+    left: 50%;
+    transform: translateX(-50px);
+    -webkit-transform: .3s ;
+    -moz-transform: .3s ;
+    -ms-transform: .3s ;
+    -o-transform: .3s ;
+    transition: .3s;
+    -webkit-transition: .3s;
+    -moz-transition: .3s;
+    -ms-transition: .3s;
+    -o-transition: .3s;
+    z-index: 11;
+}
+.project .project-btns a {
+    color: white;
+    text-transform: capitalize;
+}
+.project:hover .project-title {
+    top: 10px;
+
+}
+.project:hover .project-btns {
+    bottom: 10px;
+
+}
+.project:hover:after {
+    content: "";
+}
+.projects a.projects-more-btn {
+    background-color: var(--secondly2-color);
+    margin-top: 30px;
+    color: white;
+    padding: 5px 30px;
+    text-transform: uppercase;
+}
+.projects a.projects-more-btn:hover {
+    background-color: var(--secondly2-alt-color);
+}
+/* main */
 /* body (both) */
 
 /* body (eng) */
@@ -375,7 +547,7 @@ body.eng header .container nav  {
 }
 @media (max-width:767px) {
     body.eng header .container nav {
-    margin-right: 50px;
+    margin-right: 90px;
 }
 }
 body.eng header .container ul a  {
@@ -386,7 +558,7 @@ body.eng header .container ul a  {
         margin-left: 0;
     }
 }
-body.eng header .container a.lang-change  {
+body.eng header .container .header-btns  {
     left: auto;
     right: 20px;
 }
@@ -406,7 +578,7 @@ body.ar header .container nav  {
 }
 @media (max-width:767px) {
     body.ar header .container nav {
-    margin-left: 50px;
+    margin-left: 90px;
 }
 }
 body.ar header .container ul a  {
@@ -417,7 +589,7 @@ body.ar header .container ul a  {
         margin-right: 0;
     }
 }
-body.ar header .container a.lang-change  {
+body.ar header .container .header-btns {
     right: auto;
     left: 20px;
 }
@@ -454,6 +626,13 @@ body.ar .landing-page .landing-bg2 {
 body.ar .landing-page .landing-bg3 {
     right: auto;
     left: -100px;
+}
+body.ar header .container a.lang-change  {
+    margin-left: 0;
+    margin-right: 10px;
+}
+body.ar .landing-page .simple-info .simple-intro .domain {
+    letter-spacing: 0;
 }
 /* landing-page */
 
