--- a/CSS/style.css
+++ b/CSS/style.css
@@ -191,11 +191,6 @@ body.both .landing-page {
     height: 100vh;
     overflow: hidden;
 }
-/* @media (max-width: 767px) {
-    body.both .landing-page {
-        background-color: var(--main-color);
-    }
-} */
 @media (min-width:768px) {
 body.both .landing-page::before ,
 body.both .landing-page::after {
@@ -396,6 +391,7 @@ body.both .landing-page a.menu-angles i {
 
 /* landing */
 /* main */
+/* projects-section */
 main {
     height: 5555px;
 }
@@ -446,7 +442,6 @@ main {
     }
 }
 .project {
-    width: 100%;
     position: relative;
     overflow: hidden;
     border-radius: 10px;
@@ -472,7 +467,7 @@ main {
     top: 0;
     width: 100%;
     height: 100%;
-    background-color: #00000065;
+    background-color: #00000094;
     transition: .3s;
     -webkit-transition: .3s;
     -moz-transition: .3s;
@@ -494,14 +489,12 @@ main {
 
 }
 .project .project-btns {
+    display: flex;
+    justify-content: center;
+    column-gap: 20px;
+    width: 100%;
     position: absolute;
     bottom: -100%;
-    left: 50%;
-    transform: translateX(-50px);
-    -webkit-transform: .3s ;
-    -moz-transform: .3s ;
-    -ms-transform: .3s ;
-    -o-transform: .3s ;
     transition: .3s;
     -webkit-transition: .3s;
     -moz-transition: .3s;
@@ -512,13 +505,26 @@ main {
 .project .project-btns a {
     color: white;
     text-transform: capitalize;
+    font-weight: 600;
+}
+.project .project-btns a:first-child::before ,
+.project .project-btns a:last-child::before {
+    font-family: "Font Awesome 6 Free";
+    font-weight: 900;
+    margin-right: 10px;
+}
+.project .project-btns a:first-child::before{
+    content: "\f05a";
+}
+.project .project-btns a:last-child::before{
+    content: "\f002";
 }
 .project:hover .project-title {
-    top: 10px;
+    top: 50px;
 
 }
 .project:hover .project-btns {
-    bottom: 10px;
+    bottom: 50px;
 
 }
 .project:hover:after {
@@ -534,6 +540,7 @@ main {
 .projects a.projects-more-btn:hover {
     background-color: var(--secondly2-alt-color);
 }
+/* projects-section */
 /* main */
 /* body (both) */
 
@@ -635,7 +642,15 @@ body.ar .landing-page .simple-info .simple-intro .domain {
     letter-spacing: 0;
 }
 /* landing-page */
-
+/* main */
+/* projects-section */
+body.ar .project .project-btns a:first-child::before ,
+body.ar .project .project-btns a:last-child::before {
+    margin-left: 10px;
+    margin-right: 0;
+}
+/* projects-section */
+/* main */
 /* header */
 /* body (ar) */
 
