--- a/CSS/style.css
+++ b/CSS/style.css
@@ -133,7 +133,7 @@ body.both header .container nav .nav-icon {
 }
 
 body.both header .container ul a  {
-    color: var(--p-color);
+    color: #6d6d6d;
     text-transform: uppercase;
     font-size: 14px;
     display: flex;
