--- a/CSS/style.css
+++ b/CSS/style.css
@@ -399,6 +399,7 @@ main {
     position: relative;
     width: fit-content;
     margin: auto;
+    margin-bottom: 60px;
     text-transform: capitalize ;
 }
 .sec-title:before ,
@@ -434,7 +435,6 @@ main {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     gap: 20px;
-    margin-top: 60px;
 }
 @media (max-width:320px) {
     .projects-holder {
@@ -541,6 +541,102 @@ main {
     background-color: var(--secondly2-alt-color);
 }
 /* projects-section */
+/* hobbies-section */
+@media (max-width:320px) {
+    body.both .hobbies .container {
+        width: 100%;
+    }
+}
+body.both .hobby {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 20px;
+    margin-bottom: 20px;
+}
+
+@media (min-width:768px) {
+    body.both .hobby {
+    height: 500px;
+    }
+}
+@media (max-width:768px) {
+    body.both .hobby {
+    flex-direction: column;
+    }
+}
+body.both .hobbies .img-holder {
+    display: flex;
+    align-items: center;
+    position: relative;
+}
+body.both .hobbies .img-holder::after {
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    border-radius: 30px;
+    -webkit-border-radius: 30px;
+    -moz-border-radius: 30px;
+    -ms-border-radius: 30px;
+    -o-border-radius: 30px;
+}
+body.both .hobbies img {
+    width: 300px;
+    height: 500px;
+    border-radius: 30px;
+    -webkit-border-radius: 30px;
+    -moz-border-radius: 30px;
+    -ms-border-radius: 30px;
+    -o-border-radius: 30px;
+}
+
+@media (min-width:768px) {
+    body.both .photography .img-holder {
+        order: 1;
+    }
+}
+body.both .sport .img-holder::after {
+    background-color: rgba(255, 0, 0, 0.466);
+}
+body.both .photography .img-holder::after {
+    background-color: rgba(0, 128, 0, 0.466);
+}
+body.both .meditation .img-holder::after {
+    background-color: rgba(0, 0, 255, 0.466);
+}
+body.both .hobby .text {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    background-color: #eee;
+    height: 100%;
+    border-radius: 30px;
+    -webkit-border-radius: 30px;
+    -moz-border-radius: 30px;
+    -ms-border-radius: 30px;
+    -o-border-radius: 30px;
+}
+@media (max-width:320px) {
+    body.both .hobby .text {
+    width: 300px;
+}
+}
+body.both .hobby .text .holder {
+    width: 70%;
+}
+
+body.both .hobby .text h2 {
+    text-transform: capitalize;
+}
+body.both .hobby .text p {
+    text-transform: capitalize;
+}
+
+/* hobbies-section */
 /* main */
 /* body (both) */
 
