--- a/CSS/style.css
+++ b/CSS/style.css
@@ -167,20 +167,26 @@ body.both header .container ul a:hover {
         text-align: center;
     }
 }
-body.both header .container a.lang-change  {
+body.both header .container a.lang-change ,
+body.both header .container a.search-bar {
     width: 30px;
     height: 30px;
-    background-color: black;
-    color: white; 
+    color: #000000;
+    border: 1px solid black;
     text-transform: uppercase;
+    transition: .3s;
+    -webkit-transition: .3s;
+    -moz-transition: .3s;
+    -ms-transition: .3s;
+    -o-transition: .3s;
+}
+body.both header .container a.lang-change  {
     margin-left: 10px;
 }
-body.both header .container a.search-bar  {
-    width: 30px;
-    height: 30px;
-    background-color: black;
-    color: white; 
-    text-transform: uppercase;
+body.both header .container a.lang-change:hover ,
+body.both header .container a.search-bar:hover {
+    color: white;
+    background-color: #000000;
 }
 /* header */
 /* landing */
@@ -302,6 +308,8 @@ body.both .landing-page .simple-info .simple-intro .domain {
     font-size: 25px;
     text-transform: capitalize;
     letter-spacing: 1px;
+    border-top-left-radius: 20px;
+    border-bottom-right-radius: 20px;
 }
 body.both .landing-page .simple-info .simple-intro .social-links {
     display: flex;
@@ -314,7 +322,7 @@ body.both .landing-page .simple-info .simple-intro .social-links a i {
     width: 30px;
     height: 30px;
     border-radius: 50%;
-    background: black;
+    background-color: black;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -322,25 +330,68 @@ body.both .landing-page .simple-info .simple-intro .social-links a i {
     -moz-border-radius: 50%;
     -ms-border-radius: 50%;
     -o-border-radius: 50%;
+    transition: .3s;
+    -webkit-transition: .3s;
+    -moz-transition: .3s;
+    -ms-transition: .3s;
+    -o-transition: .3s;
+}
+body.both .landing-page .simple-info .simple-intro .social-links a:first-child i:hover {
+    background-color: #1877f2;
+}
+body.both .landing-page .simple-info .simple-intro .social-links a:nth-child(2) i:hover {
+    background-color: #f77737;
+}
+body.both .landing-page .simple-info .simple-intro .social-links a:last-child i:hover {
+    background-color: #ff0000;
 }
 body.both .landing-page .simple-info .simple-intro .social-links a:nth-child(2) i {
     margin: 0 10px;
 }
 body.both .landing-page .simple-info .simple-intro a.more  {
+    position: relative;
+    overflow: hidden;
     display: block;
     width: fit-content;
     margin-left: auto ;
     margin-right: auto ;
     padding: 5px 20px;
     border-radius: 20px;
-    background-color: var(--secondly2-color);
+    border: 2px solid var(--secondly2-color);
+    color: var(--secondly2-color);
     -webkit-border-radius: 20px;
     -moz-border-radius: 20px;
     -ms-border-radius: 20px;
     -o-border-radius: 20px;
     text-transform: uppercase;
-    color: white;
     font-weight: 600;
+    transition: .3s;
+    -webkit-transition: .3s;
+    -moz-transition: .3s;
+    -ms-transition: .3s;
+    -o-transition: .3s;
+}
+body.both .landing-page .simple-info .simple-intro a.more::after {
+    content: "";
+    position: absolute;
+    left: 0%;
+    top: 0;
+    z-index: -1;
+    width: 0;
+    height: 100%;
+    background-color: var(--secondly2-color);
+    transition: .3s;
+    -webkit-transition: .3s;
+    -moz-transition: .3s;
+    -ms-transition: .3s;
+    -o-transition: .3s;
+}
+body.both .landing-page .simple-info .simple-intro a.more:hover {
+    color: white;
+    border-color: white;
+}
+body.both .landing-page .simple-info .simple-intro a.more:hover::after {
+    width: 100%;
 }
 
 body.both .landing-page .simple-info .simple-img img {
@@ -597,13 +648,7 @@ body.both .hobbies img {
     -ms-transition: .6s;
     -o-transition: .6s;
 }
-/* body.both .hobbies .img-holder:hover img {
-    transform: scale(.9);
-    -webkit-transform: scale(.9);
-    -moz-transform: scale(.9);
-    -ms-transform: scale(.9);
-    -o-transform: scale(.9);
-} */
+
 
 @media (min-width:768px) {
     body.both .photography .img-holder {
@@ -623,7 +668,6 @@ body.both .hobby .text {
     display: flex;
     justify-content: center;
     align-items: center;
-    text-align: center;
     background-color: #eee;
     height: 100%;
     border-radius: 30px;
@@ -638,10 +682,16 @@ body.both .hobby .text {
     width: 300px;
 }
 }
+@media (max-width:768px) {
+    body.both .hobby .text {
+    padding: 30px;
+
+}
+}
 body.both .hobbies .hobby .text  i {
     z-index: 11;
     color: white;
-    font-size: 60px;
+    font-size: 50px;
     top: 30px;
     right: 30px;
     animation: ball-rolling 1s infinite linear alternate;
@@ -660,13 +710,22 @@ body.both .hobbies .hobby.photography .text  i {
         -o-transform: rotate(1turn);
 }
 }
+@media (max-width:767px) {
+    body.both .hobbies .hobby .text  i {
+        display: none;
+    }
+}
 body.both .hobby .text .holder {
     width: 70%;
 }
-
-
+@media (max-width:992px) {
+    body.both .hobby .text .holder {
+    width: 90%;
+}
+}
 body.both .hobby .text h2 {
     text-transform: capitalize;
+    text-align: center;
 }
 body.both .hobby .text p {
     position: relative;
@@ -679,6 +738,13 @@ body.both .hobby .text p {
     word-spacing: 1px;
     line-height: 1.5;
     font-weight: 500;
+    text-align: center;
+}
+@media (min-width:767px) {
+    body.both .hobby .text p {
+        text-align: justify;
+
+    }
 }
 body.both .hobby .text p:before,
 body.both .hobby .text p:after {
