--- a/CSS/style.css
+++ b/CSS/style.css
@@ -877,8 +877,113 @@ body.both .hobby .text p:after {
     top: auto;
     bottom: -10px;
 }
-
 /* hobbies-section */
+/* skills-section */
+@media (max-width:320px) {
+    body.both .skills {
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+}
+body.both .skills label {
+    display: block;
+    text-transform: capitalize;
+    margin-bottom: 5px;
+    font-weight: 600;
+}
+body.both .skills .cards {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    gap: 20px;
+    margin-bottom: 10px;
+}
+@media (max-width:320px) {
+    body.both .skills .cards {
+        gap: 10px;
+    }
+}
+body.both .skills .cards .card {
+    position: relative;
+    padding: 15px;
+    background-color: var(--eee-color);
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+}
+body.both .skills .cards .card i {
+    right: 10px;
+    top: 10px;
+}
+body.both .skills .cards .card h2 {
+    line-height: 1.2;
+    text-align: center;
+    font-size: 20px;
+    margin-bottom: 20px;
+}
+body.both .skills .cards .card .circular-bar {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    margin: 0 auto;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+}
+/* programming */
+body.both .skills .cards.programming .card .html-progress {
+    background: conic-gradient(#22c55e 360deg, #ddd 0deg);
+}
+body.both .skills .cards.programming .card .css-progress {
+    background: conic-gradient(#22c55e 360deg, #ddd 0deg);
+}
+body.both .skills .cards.programming .card .js-progress {
+    background: conic-gradient(#f44336 36deg, #ddd 0deg);
+}
+body.both .skills .cards.programming .card .python-progress {
+    background: conic-gradient(#f44336 0deg, #ddd 0deg);
+}
+
+body.both .skills .cards.programming .card .html-progress span {
+    color: #22c55e;
+}
+body.both .skills .cards.programming .card .css-progress span {
+    color: #22c55e;
+}
+body.both .skills .cards.programming .card .js-progress span {
+    color: #f44336;
+}
+/* art */
+body.both .skills .cards.art .card .football-progress {
+    background: conic-gradient(#22c55e 360deg, #ddd 0deg);
+}
+body.both .skills .cards.art .card .photography-progress {
+    background: conic-gradient(#0075ff 180deg, #ddd 0deg);
+}
+
+body.both .skills .cards.art .card .football-progress span {
+    color: #22c55e;
+}
+body.both .skills .cards.art .card .photography-progress span {
+    color: #0075ff;
+}
+body.both .skills .cards .card .circular-bar span {
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    background-color: #fff;
+    font-size: 21px;
+    font-weight: 700;
+}
+
+
+/* skills-section */
 /* main */
 /* body (both) */
 
