--- a/CSS/style.css
+++ b/CSS/style.css
@@ -889,7 +889,7 @@ body.both .skills label {
     display: block;
     text-transform: capitalize;
     margin-bottom: 5px;
-    font-weight: 600;
+    font-weight: 700;
 }
 body.both .skills .cards {
     display: grid;
@@ -995,7 +995,7 @@ section.video::after {
     position: absolute;
     left: 0;
     top: 0;
-    background-color: #00000088;
+    background-color: #000000af;
 }
 section.video video {
     margin-top: -200px;
@@ -1018,6 +1018,8 @@ section.video .content p {
     background-color: #0075ff;
     color: white;
     font-size: 40px;
+    line-height: 1.7;
+
 }
 section.video .content span {
     color: white;
@@ -1031,9 +1033,42 @@ section.video .content span:last-child {
     -ms-border-radius: 10px;
     -o-border-radius: 10px;
     text-transform: uppercase;
-    margin-top: 20px;
 }
 /* video-section */
+a.goUp {
+    position: fixed;
+    left: 30px;
+    bottom: 20px;
+    color: #000000;
+    z-index: 9999;
+}
+a.goUp i{
+    color: white;
+    font-size: 18px;
+    background-color: #000000;
+    padding: 3px;
+    border: 1px solid white;
+    border-radius: 5px;
+}
+a.goUp span {
+    display: none;
+    transition: .6s;
+    -webkit-transition: .6s;
+    -moz-transition: .6s;
+    -ms-transition: .6s;
+    -o-transition: .6s;
+    text-transform: capitalize;
+    background-color: white;
+    padding: 0 5px;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+}
+a.goUp:hover span {
+    display: inline;
+}
 /* main */
 /* body (both) */
 
@@ -1145,6 +1180,7 @@ body.ar header .container a.lang-change  {
 body.ar .landing-page .simple-info .simple-intro .domain {
     letter-spacing: 0;
 }
+
 /* landing-page */
 /* main */
 /* projects-section */
@@ -1164,6 +1200,11 @@ body.ar .hobbies .hobby.photography .text  i {
     right: 30px;
 }
 /* hobbies-section */
+body.ar a.goUp {
+    position: fixed;
+    left: auto;
+    right: 30px;
+}
 /* main */
 /* body (ar) */
 
