--- a/CSS/fw.css
+++ b/CSS/fw.css
@@ -89,6 +89,12 @@
 .pl-20 {
     padding-left: 20px;
 }
+.m-30 {
+    margin: 30px;
+}
+.m-40 {
+    margin: 40px;
+}
 .mt-5 {
     margin-top: 5px;
 }
@@ -183,6 +189,9 @@
 
 .bg-white {
     background-color: #fff;
+}
+.bg-eee {
+    background-color: #eee;
 }
 .bg-blue {
     background-color: #0075ff;
