--- a/CSS/style.css
+++ b/CSS/style.css
@@ -937,6 +937,11 @@ body.both .skills .cards .card h2 {
     font-size: 20px;
     margin-bottom: 20px;
 }
+@media (max-width:320px){
+    body.both .skills .cards .card h2 {
+        font-size: 15px;
+    }
+}
 body.both .skills .cards .card .circular-bar {
     width: 100px;
     height: 100px;
@@ -1034,7 +1039,11 @@ section.video .content p {
     color: white;
     font-size: 40px;
     line-height: 1.7;
-
+}
+@media (max-width:320px){
+    section.video .content p {
+        font-size: 30px;
+    }
 }
 section.video .content span {
     color: white;
@@ -1057,14 +1066,16 @@ body.both .services-holder {
     gap: 30px;
 }
 @media (max-width:320px) {
-    body.both .services {
-        padding-left: 0;
-        padding-right: 0;
-    }
     body.both .services-holder {
         display: grid;
         grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
         gap: 30px;
+    }
+}
+@media (max-width:425px) {
+    body.both section.services .container {
+        padding-left: 0;
+        padding-right: 0;
     }
 }
 body.both .services .sec-title:after {
@@ -1121,6 +1132,11 @@ body.both .services-holder .service-wedget h2 {
     text-transform: capitalize;
     line-height: 1;
 }
+@media (max-width:320px) {
+    body.both .services-holder .service-wedget h2 {
+        font-size: 20px;
+    }
+}
 body.both .services-holder .service-wedget a.ser-details {
     display: block;
     position: relative;
@@ -1166,12 +1182,20 @@ body.both section.about .about-bg {
     width: 100%;
     height: 600px;
     background-image: url(../IMGS/about-me.jpg);
-    /* background-size: contain; */
-    background-size: 100%;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-size: 100% 100vh;
     display: flex;
     justify-content: flex-end;
     align-items: center;
     padding-right: 50px;
+    padding-left: 50px;
+}
+@media (max-width:375px){
+    body.both section.about .about-bg {
+        padding-right: 20px;
+        padding-left: 20px;
+    }
 }
 body.both section.about .about-bg::after {
     content: "";
@@ -1182,14 +1206,30 @@ body.both section.about .about-bg::after {
     height: 100%;
     background-image: linear-gradient(to right, transparent, black 60%);
 }
+@media (max-width:767px){
+    body.both section.about .about-bg::after{
+    background-image: none;
+    background-color: #000000c2;
+    }
+}
 body.both section.about .about-bg .content {
     position: relative;
     z-index: 1;
     width: 40%;
 }
+@media (max-width:767px){
+    body.both section.about .about-bg .content {
+    width: 100%;
+}
+}
 body.both section.about .about-bg .content p {
     color: white;
     text-align: justify;
+}
+@media (max-width:320px){
+    body.both section.about .about-bg .content p {
+    font-size: 14px;
+}
 }
 body.both section.about .about-bg .content a.about-btn {
     display: block;
@@ -1381,9 +1421,6 @@ body.ar .services-holder .service-wedget a.ser-details {
 }
 /* services-section */
 /* about-section */
-body.ar section.about .about-bg {
-    padding-left: 50px;
-}
 body.ar section.about .about-bg::after {
     content: "";
     position: absolute;
